--- a/tmux.conf
+++ b/tmux.conf
@@ -2,6 +2,7 @@ unbind C-b
 set -g prefix C-a
 
 #### COLOUR (Solarized 256)
+set -g default-terminal "xterm-256color"
 
 # default statusbar colors
 set-option -g status-bg colour235 #base02
@@ -33,4 +34,3 @@ set-option -g display-panes-colour colour166 #orange
 # clock
 set-window-option -g clock-mode-colour colour64 #green
 
-set -g default-terminal "screen-256color"
